--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 #header{
         margin-left: 50px;
-    height: 100px;
+    height: 70px;
     width: 1400px;
     background-color: black;
        position:fixed ;
@@ -20,6 +20,9 @@ body{
 }
 li a{
     color: white;
+}
+li a:hover{
+    color: aqua;
 }
 #header ul{
     list-style-type: none;
@@ -206,6 +209,10 @@ letter-spacing: 2px;
     object-fit: contain;
 
 }
+.back:nth-child(3) img{
+    top: 1mm;
+ height: 120px;
+}
 .back img{
     height: 150px;
     width: 300px;
@@ -380,7 +387,7 @@ opacity: 0;
     margin-left: 50px;
     height: 670px;
     width: 1400px;
-    background-color: grey;
+   background-color: rgb(2, 8, 110);
     display:flex;
     flex-direction: column;
     justify-content: space-around;
@@ -451,7 +458,7 @@ opacity: 0;
 }
 .Contact{
     
-     color: #000000;
+     color: #ffffff;
   text-shadow:
     0 0 5px rgba(40, 184, 245, 0.7),
     0 0 15px rgba(160, 60, 253, 0.6);
@@ -479,4 +486,22 @@ opacity: 0;
 
 .contact-info a:hover {
   text-decoration: underline;
+}
+/* animation */
+.loader {
+  width: 60px;
+  aspect-ratio: 2;
+  --_g: no-repeat radial-gradient(circle closest-side,#edecec 90%,#00000000);
+  background: 
+    var(--_g) 0%   50%,
+    var(--_g) 50%  50%,
+    var(--_g) 100% 50%;
+  background-size: calc(100%/3) 50%;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+    20%{background-position:0%   0%, 50%  50%,100%  50%}
+    40%{background-position:0% 100%, 50%   0%,100%  50%}
+    60%{background-position:0%  50%, 50% 100%,100%   0%}
+    80%{background-position:0%  50%, 50%  50%,100% 100%}
 }
