--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@ button:hover {
   line-height: 1.9;
   margin-bottom: 18px;
   text-align: justify;
-  color: #ffffff;
+  color:white;
 }
 
 /* Responsive */
